# Task1

./: .gitignore  Makefile  README.md  labyrinth-demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
